# rnam

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example.ipynb  pyproject.toml
rnam/: __init__.py  gru.py  linear.py
tests/: conftest.py  test_gru.py  test_linear.py  utils.py
